idf_component_register(SRCS "main.cpp"
                            "gsusb_device/gsusb_device.cpp"
                       INCLUDE_DIRS .
                       "constants"
                       "services"
                       "definitions"
                       "debug"
                       "gsusb_device"

                       )
